Added clickable links to Index site

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,6 +5,20 @@
     <title>index</title>
 </head>
 <body>
-<h1>this is the index</h1>
+<h1>Webservices Lab1</h1>
+<h2>Linus & Måns</h2>
+
+<h3>"Kunna serva statiska filer från disk av formaten html, css, js, pdf samt ett eller flera bildformat med
+    rätt content-type i svaret."
+    <ul>
+        <li><a href="http://localhost:8080/fire.png"> PNG Bild</a></li>
+        <li><a href="http://localhost:8080/javascript.html"> Javascript</a></li>
+        <li><a href="http://localhost:8080/lab1.pdf"> Pdf Bild</a></li>
+        <li><a href="http://localhost:8080/stylesheet.css"> CSS</a></li>
+        <li><a href="http://localhost:8080/stylesheet.html"> HTML</a></li>
+    </ul>
+
+</h3>
+
 </body>
 </html>
