fixed javascript post method

--- a/src/main/resources/javascript.html
+++ b/src/main/resources/javascript.html
@@ -3,7 +3,7 @@
 <body>
 <p>Enter name and age in the fields, then click "Submit" to submit the form:</p>
 
-<form id="frm1" action="/action_page.php">
+<form id="frm1" action="/jsonTest.json" method="post">
     First name: <input type="text" name="name"><br>
     age: <input type="text" name="age"><br><br>
     <input type="button" onclick="myFunction()" value="Submit">
