Index updated with Json post

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -12,12 +12,16 @@
     rätt content-type i svaret."
     <ul>
         <li><a href="http://localhost:8080/fire.png"> PNG Bild</a></li>
-        <li><a href="http://localhost:8080/javascript.html"> Javascript</a></li>
-        <li><a href="http://localhost:8080/lab1.pdf"> Pdf Bild</a></li>
+        <li><a href="http://localhost:8080/lab1.pdf"> Pdf dokument</a></li>
         <li><a href="http://localhost:8080/stylesheet.css"> CSS</a></li>
         <li><a href="http://localhost:8080/stylesheet.html"> HTML</a></li>
     </ul>
 
+</h3>
+<h3>Post input returns json:
+    <ui>
+        <li><a href="http://localhost:8080/javascript.html"> Json</a></li>
+    </ui>
 </h3>
 
 </body>
